<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#E6E6E6">

    <View
        android:id="@+id/view1"
        android:layout_width="407dp"
        android:layout_height="203dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="#FFFFFF" />


    <Button
        android:id="@+id/imageButton2"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="3dp"
        android:layout_marginRight="275dp"
        android:text="present" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="282dp"
        android:layout_height="49dp"
        android:layout_marginLeft="140dp"
        android:text="sort by statistics:"
        android:textColor="@color/colorFlowerDark"
        android:textSize="24sp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/textView11"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:text="competition:"
        android:textColor="@color/colorFlowerDark"
        android:textSize="24sp"
        android:layout_marginTop="55dp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="230dp"
        android:layout_height="51dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="40dp"
        />
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="230dp"
        android:layout_height="51dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="90dp"
        />


    <ListView
        android:id="@+id/listview_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageButton2"
        android:layout_marginTop="145dp"
        android:dividerHeight="5dp"
        android:divider="#E6E6E6"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:text="sort"
        android:layout_marginTop="100dp"
        />

    <Button
        android:id="@+id/button3"
        android:layout_height="wrap_content"
        android:text="Clear"
        android:layout_width="400dp"
        android:layout_marginTop="160dp"/>

</RelativeLayout>