...





        <EditText
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#FFFFFF"/>


        <ListView
            android:id="@+id/list_view"

            android:layout_width="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_height="wrap_content"></ListView>

    </LinearLayout>
...
