...
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TableLayout
                            android:id="@+id/tableMyPlayers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"></TableLayout>


                    </LinearLayout>

...
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:layout_weight="1.40"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/TopButton2"
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                android:scaleType="centerCrop"
                                android:padding="0dp"
                                app:layout_constraintTop_toBottomOf="@+id/textView4"
                                tools:layout_editor_absoluteX="148dp" />
...
